--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -9,4 +9,8 @@
             30
         </session-timeout>
     </session-config>
+    <!-- Welcome File -->
+    <welcome-file-list>
+        <welcome-file>LandingPage.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
