--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -59,9 +59,25 @@
         </init-param>
         <!-- Database URL -->
     </servlet>
-    
-    
     <!-- Servlets End -->
+    <!-- Captcha Servlet -->
+    <servlet>
+        <servlet-name>SimpleCaptcha</servlet-name>
+        <servlet-class>nl.captcha.servlet.SimpleCaptchaServlet</servlet-class>
+        <init-param>
+            <param-name>width</param-name>
+            <param-value>250</param-value>
+        </init-param>
+        <init-param>
+            <param-name>height</param-name>
+            <param-value>75</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>SimpleCaptcha</servlet-name>
+        <url-pattern>/captchaImg</url-pattern>
+    </servlet-mapping>
+    <!-- Captcha Servlet End -->
     <!-- Signup Servlet -->
     <servlet>
         <servlet-name>SignupServlet</servlet-name>
