--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
-    
+<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <!-- Session Config -->
+    
     <session-config>
         <session-timeout>
             30
@@ -22,12 +18,6 @@
     <!-- Servlets -->
     
     <!-- Login Servlet -->
-    
-    <servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/LoginServlet</url-pattern>
-    </servlet-mapping>
-    
     <servlet>
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>LoginServlet</servlet-class>
@@ -65,25 +55,6 @@
         </init-param>
         <!-- Database URL -->
     </servlet>
-    <!-- Servlets End -->
-    <!-- Captcha Servlet -->
-    <servlet>
-        <servlet-name>SimpleCaptcha</servlet-name>
-        <servlet-class>nl.captcha.servlet.SimpleCaptchaServlet</servlet-class>
-        <init-param>
-            <param-name>width</param-name>
-            <param-value>250</param-value>
-        </init-param>
-        <init-param>
-            <param-name>height</param-name>
-            <param-value>75</param-value>
-        </init-param>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>SimpleCaptcha</servlet-name>
-        <url-pattern>/captchaImg</url-pattern>
-    </servlet-mapping>
-    <!-- Captcha Servlet End -->
     <!-- Signup Servlet -->
     <servlet>
         <servlet-name>SignupServlet</servlet-name>
@@ -122,21 +93,103 @@
         </init-param>
         <!-- Database URL -->
     </servlet>
+    <!-- PDF Servlet -->
+    <servlet>
+        <servlet-name>PDFServlet</servlet-name>
+        <servlet-class>PDFServlet</servlet-class>
+        <!-- Database Driver -->
+        <init-param>
+            <param-name>jdbcClassName</param-name>
+            <param-value>org.apache.derby.jdbc.ClientDriver</param-value>
+        </init-param>
+        <!-- Database Username -->
+        <init-param>
+            <param-name>dbUserName</param-name>
+            <param-value>app</param-value>
+        </init-param>
+        <!-- Database Password -->
+        <init-param>
+            <param-name>dbPassword</param-name>
+            <param-value>app</param-value>
+        </init-param>
+        <!-- Database URL -->
+        <init-param>
+            <param-name>jdbcDriverURL</param-name>
+            <param-value>jdbc:derby</param-value>
+        </init-param>
+        <init-param>
+            <param-name>dbHostName</param-name>
+            <param-value>localhost</param-value>
+        </init-param>
+        <init-param>
+            <param-name>dbPort</param-name>
+            <param-value>1527</param-value>
+        </init-param>
+        <init-param>
+            <param-name>databaseName</param-name>
+            <param-value>LuvamineDB</param-value>
+        </init-param>
+        <!-- Database URL -->
+        <multipart-config>
+        </multipart-config>
+    </servlet>
     
+    <!-- Cart Servlet -->
+    <servlet>
+        <servlet-name>CartServlet</servlet-name>
+        <servlet-class>CartServlet</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>CartServlet</servlet-name>
+        <url-pattern>/CartServlet</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>PDFServlet</servlet-name>
+        <url-pattern>/PDFServlet</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>SignupServlet</servlet-name>
         <url-pattern>/SignupServlet</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/LoginServlet</url-pattern>
+    </servlet-mapping>
+    <!-- Logout Servlet -->
+    <servlet>
+        <servlet-name>LogoutServlet</servlet-name>
+        <servlet-class>LogoutServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LogoutServlet</servlet-name>
+        <url-pattern>/LogoutServlet</url-pattern>
+    </servlet-mapping>
+    <!-- Logout Servlet End -->
+    <!-- Servlets End -->
     <!-- Error Page -->
     <error-page>
         <error-code>404</error-code>
         <location>/Error404.jsp</location>
     </error-page>
     <!-- Error Page End -->
-    
+    <!-- Captcha Servlet -->
+    <servlet>
+        <servlet-name>SimpleCaptcha</servlet-name>
+        <servlet-class>nl.captcha.servlet.SimpleCaptchaServlet</servlet-class>
+        <init-param>
+            <param-name>width</param-name>
+            <param-value>250</param-value>
+        </init-param>
+        <init-param>
+            <param-name>height</param-name>
+            <param-value>75</param-value>
+        </init-param>
+    </servlet>
     <servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/LoginServlet</url-pattern>
+        <servlet-name>SimpleCaptcha</servlet-name>
+        <url-pattern>/captchaImg</url-pattern>
     </servlet-mapping>
-    <!-- Servlets End -->
+    <!-- Captcha Servlet End -->
 </web-app>
